--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,7 @@ group = 'com.mindhub'
 version = '0.0.1-SNAPSHOT'
 
 java {
-	sourceCompatibility = '1.8'
+	sourceCompatibility = "11"
 }
 
 repositories {
@@ -28,8 +28,10 @@ dependencies {
 	implementation 'org.pstgresql:postgresql'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	implementation 'org.springframework.boot:spring-boot-starter-security'
+	implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-xml'
 }
 
 tasks.named('test') {
 	useJUnitPlatform()
 }
+targetCompatibility = JavaVersion.VERSION_11
